--- a/Convolutional Autoencoder/train.ipynb
+++ b/Convolutional Autoencoder/train.ipynb
@@ -238,7 +238,7 @@
     "        writer.add_summary(rs, i)\n",
     "    if i%100 == 0: # print loss\n",
     "        print(\"step %d, loss %g\"%(i, cost.eval(feed_dict={x:batch_x, y:batch_y})))\n",
-    "    if i%1000 == 0 & i >= 1000: # save\n",
+    "    if i%1000 == 0: # save\n",
     "        save_path = saver.save(sess, 'save/' + str(i) + '.ckpt')\n",
     "        print('model saved')\n",
     "\n",
