--- a/Convolutional Autoencoder/train.ipynb
+++ b/Convolutional Autoencoder/train.ipynb
@@ -96,9 +96,9 @@
     "    return tf.nn.conv2d_transpose(x, W, output_shape, strides = [1, 1, 1, 1], padding = 'SAME')\n",
     "\n",
     "def max_pool_2x2(x):\n",
-    "    _, argmax = tf.nn.max_pool_with_argmax(x, ksize=[1,2,2,1], strides=[1,2,2,1], padding = 'SAME')\n",
+    "    #_, argmax = tf.nn.max_pool_with_argmax(x, ksize=[1,2,2,1], strides=[1,2,2,1], padding = 'SAME')\n",
     "    pool = tf.nn.max_pool(x, ksize = [1, 2, 2, 1], strides = [1, 2, 2, 1], padding = 'SAME')\n",
-    "    return pool, argmax\n",
+    "    return pool\n",
     "\n",
     "def max_unpool_2x2(x, shape): # input shape\n",
     "    inference = tf.image.resize_nearest_neighbor(x, tf.stack([shape[1]*2, shape[2]*2]))\n",
@@ -116,15 +116,15 @@
      "text": [
       "input layer shape : (?, 256, 256, 1)\n",
       "code layer shape : (?, 64, 64, 128)\n",
-      "reconstruct layer shape : (?, 256, 256, 1)\n"
+      "output layer shape : (?, 256, 256, 1)\n"
      ]
     }
    ],
    "source": [
     "\n",
     "tf.reset_default_graph()\n",
-    "x = tf.placeholder(tf.float32, shape = [None, 256*256])\n",
-    "y = tf.placeholder(tf.float32, shape = [None, 256*256])\n",
+    "x = tf.placeholder(tf.float32, shape = [None, 256*256], name='x')\n",
+    "y = tf.placeholder(tf.float32, shape = [None, 256*256], name='y')\n",
     "x_origin = tf.reshape(x, [-1, 256, 256, 1])\n",
     "y_origin = tf.reshape(y, [-1, 256, 256, 1])\n",
     "\n",
@@ -133,14 +133,14 @@
     "b_e_conv1 = bias_variable([64], \"b_e_conv1\")\n",
     "h_e_conv1 = tf.nn.relu(tf.add(conv2d(x_origin, W_e_conv1), b_e_conv1))\n",
     "# pool1 256,64 > 128,64\n",
-    "h_e_pool1, argmax_e_pool1 = max_pool_2x2(h_e_conv1)\n",
+    "h_e_pool1 = max_pool_2x2(h_e_conv1)\n",
     "\n",
     "# conv2 128,64 > 128,128\n",
     "W_e_conv2 = weight_variable([5, 5, 64, 128], \"w_e_conv2\")\n",
     "b_e_conv2 = bias_variable([128], \"b_e_conv2\")\n",
     "h_e_conv2 = tf.nn.relu(tf.add(conv2d(h_e_pool1, W_e_conv2), b_e_conv2))\n",
     "# pool2 128,128 > 64,128\n",
-    "h_e_pool2, argmax_e_pool2 = max_pool_2x2(h_e_conv2)\n",
+    "h_e_pool2 = max_pool_2x2(h_e_conv2)\n",
     "\n",
     "# code 64,128\n",
     "code_layer = h_e_pool2\n",
@@ -161,15 +161,18 @@
     "\n",
     "x_reconstruct = h_d_pool2\n",
     "\n",
+    "result = tf.sigmoid(x_reconstruct, name='result')\n",
+    "\n",
     "print(\"input layer shape : %s\" % x_origin.get_shape())\n",
     "print(\"code layer shape : %s\" % code_layer.get_shape())\n",
-    "print(\"reconstruct layer shape : %s\" % x_reconstruct.get_shape())\n",
+    "print(\"output layer shape : %s\" % result.get_shape())\n",
     "\n",
     "# optimizer\n",
     "with tf.name_scope('loss'):\n",
-    "    cost = tf.reduce_mean(tf.pow(x_reconstruct - y_origin, 2))\n",
+    "    #cost = tf.reduce_mean(tf.pow(y_origin - result, 2))\n",
+    "    cost = tf.sqrt(tf.reduce_mean(tf.square(y_origin - result)))\n",
     "    tf.summary.scalar('loss', cost)\n",
-    "optimizer = tf.train.AdamOptimizer(0.01).minimize(cost)"
+    "optimizer = tf.train.AdamOptimizer(1e-4).minimize(cost)"
    ]
   },
   {
@@ -181,15 +184,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(60, 65536)\n",
-      "step 0, loss 3540.11\n"
+      "step 0, loss 64.6948\n",
+      "model saved\n"
      ]
     },
     {
@@ -199,7 +202,7 @@
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-12-f02dd34f3de8>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     28\u001b[0m         \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'model saved'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     29\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 30\u001b[0;31m     \u001b[0moptimizer\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mrun\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mfeed_dict\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m{\u001b[0m\u001b[0mx\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0mbatch_x\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0my\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0mbatch_y\u001b[0m\u001b[0;34m}\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     31\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     32\u001b[0m \u001b[0;31m#print(\"final loss %g\" % cost.eval(feed_dict={x: mnist.test.images}))\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m<ipython-input-6-a3d2673e0809>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     30\u001b[0m             \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'model saved'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     31\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 32\u001b[0;31m         \u001b[0moptimizer\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mrun\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mfeed_dict\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m{\u001b[0m\u001b[0mx\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0mbatch_x\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0my\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0mbatch_y\u001b[0m\u001b[0;34m}\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
       "\u001b[0;32m/Library/Frameworks/Python.framework/Versions/3.6/lib/python3.6/site-packages/tensorflow/python/framework/ops.py\u001b[0m in \u001b[0;36mrun\u001b[0;34m(self, feed_dict, session)\u001b[0m\n\u001b[1;32m   2278\u001b[0m         \u001b[0mnone\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mthe\u001b[0m \u001b[0mdefault\u001b[0m \u001b[0msession\u001b[0m \u001b[0mwill\u001b[0m \u001b[0mbe\u001b[0m \u001b[0mused\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   2279\u001b[0m     \"\"\"\n\u001b[0;32m-> 2280\u001b[0;31m     \u001b[0m_run_using_default_session\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mfeed_dict\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mgraph\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0msession\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   2281\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   2282\u001b[0m \u001b[0m_gradient_registry\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mregistry\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mRegistry\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"gradient\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
       "\u001b[0;32m/Library/Frameworks/Python.framework/Versions/3.6/lib/python3.6/site-packages/tensorflow/python/framework/ops.py\u001b[0m in \u001b[0;36m_run_using_default_session\u001b[0;34m(operation, feed_dict, graph, session)\u001b[0m\n\u001b[1;32m   5049\u001b[0m                        \u001b[0;34m\"the operation's graph is different from the session's \"\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   5050\u001b[0m                        \"graph.\")\n\u001b[0;32m-> 5051\u001b[0;31m   \u001b[0msession\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mrun\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0moperation\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mfeed_dict\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   5052\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   5053\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
       "\u001b[0;32m/Library/Frameworks/Python.framework/Versions/3.6/lib/python3.6/site-packages/tensorflow/python/client/session.py\u001b[0m in \u001b[0;36mrun\u001b[0;34m(self, fetches, feed_dict, options, run_metadata)\u001b[0m\n\u001b[1;32m    903\u001b[0m     \u001b[0;32mtry\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    904\u001b[0m       result = self._run(None, fetches, feed_dict, options_ptr,\n\u001b[0;32m--> 905\u001b[0;31m                          run_metadata_ptr)\n\u001b[0m\u001b[1;32m    906\u001b[0m       \u001b[0;32mif\u001b[0m \u001b[0mrun_metadata\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    907\u001b[0m         \u001b[0mproto_data\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mtf_session\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mTF_GetBuffer\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mrun_metadata_ptr\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
@@ -218,33 +221,33 @@
     "#config = tf.ConfigProto(gpu_options=gpu_options)\n",
     "\n",
     "#sess = tf.Session(config = config)\n",
-    "sess = tf.InteractiveSession()\n",
-    "\n",
-    "# records\n",
-    "merged = tf.summary.merge_all()\n",
-    "writer = tf.summary.FileWriter(\"logs/\", sess.graph)\n",
-    "saver = tf.train.Saver()\n",
+    "#sess = tf.InteractiveSession()\n",
+    "w1 = tf.placeholder(\"float\", name=\"w1\")\n",
     "\n",
     "batch_size = 60\n",
-    "init_op = tf.global_variables_initializer()\n",
-    "sess.run(init_op)\n",
     "\n",
-    "\n",
-    "for i in range(5000):\n",
-    "    #batch = mnist.train.next_batch(batch_size)\n",
-    "    batch_x, batch_y = next_batch(batch_size)\n",
-    "    if i%50 == 0: # loss logs\n",
-    "        rs = sess.run(merged,feed_dict={x:batch_x, y:batch_y})\n",
-    "        writer.add_summary(rs, i)\n",
-    "    if i%100 == 0: # print loss\n",
-    "        print(\"step %d, loss %g\"%(i, cost.eval(feed_dict={x:batch_x, y:batch_y})))\n",
-    "    if i%1000 == 0: # save\n",
-    "        save_path = saver.save(sess, 'save/' + str(i) + '.ckpt')\n",
-    "        print('model saved')\n",
-    "\n",
-    "    optimizer.run(feed_dict={x:batch_x, y:batch_y})\n",
+    "with tf.Session() as sess:\n",
+    "    # logs\n",
+    "    merged = tf.summary.merge_all()\n",
+    "    writer = tf.summary.FileWriter(\"logs/\", sess.graph)\n",
     "    \n",
-    "#print(\"final loss %g\" % cost.eval(feed_dict={x: mnist.test.images}))"
+    "    sess.run(tf.global_variables_initializer())\n",
+    "    \n",
+    "    # saver\n",
+    "    saver = tf.train.Saver()\n",
+    "    \n",
+    "    for i in range(5000):\n",
+    "        batch_x, batch_y = next_batch(batch_size)\n",
+    "        if i%50 == 0: # loss logs\n",
+    "            rs = sess.run(merged,feed_dict={x:batch_x, y:batch_y})\n",
+    "            writer.add_summary(rs, i)\n",
+    "        if i%100 == 0: # print loss\n",
+    "            print(\"step %d, loss %g\"%(i, cost.eval(feed_dict={x:batch_x, y:batch_y})))\n",
+    "        if i == 5000-1: # save\n",
+    "            saver.save(sess, 'save/model.ckpt')\n",
+    "            print('model saved')\n",
+    "\n",
+    "        optimizer.run(feed_dict={x:batch_x, y:batch_y})"
    ]
   },
   {
