--- a/Convolutional Autoencoder/train.ipynb
+++ b/Convolutional Autoencoder/train.ipynb
@@ -65,8 +65,8 @@
     "    \n",
     "    for i in range(batch_size):\n",
     "        f = random.choice(filenames)\n",
-    "        img = np.array(cv2.imread('./data/x/' + f, 0))\n",
-    "        img2 = np.array(cv2.imread('./data/y/' + f, 0))\n",
+    "        img = np.array(cv2.imread('./data/x/' + f, 0)) /255\n",
+    "        img2 = np.array(cv2.imread('./data/y/' + f, 0)) /255\n",
     "        X[i, :, :] = img\n",
     "        Y[i, :, :] = img2\n",
     "    \n",
