--- a/k/model_crf.ipynb
+++ b/k/model_crf.ipynb
@@ -540,7 +540,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 76,
    "metadata": {},
    "outputs": [
     {
@@ -557,12 +557,12 @@
     {
      "data": {
       "text/plain": [
-       "(<matplotlib.axes._subplots.AxesSubplot at 0x7f965ce14a90>,\n",
+       "(<matplotlib.axes._subplots.AxesSubplot at 0x7f965cc92390>,\n",
        " Text(0.5,1,'Segmentation + CRF'),\n",
-       " <matplotlib.image.AxesImage at 0x7f965cdc9b38>)"
+       " <matplotlib.image.AxesImage at 0x7f965cc46438>)"
       ]
      },
-     "execution_count": 74,
+     "execution_count": 76,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -593,24 +593,19 @@
     "\n",
     "image = X[0,:,:,:]\n",
     "imagey = Y[0,:,:,0]\n",
-    "print(image.shape)\n",
+    "#print(image.shape)\n",
     "\n",
     "final_probabilities = predict[0,:,:,:]\n",
     "final_probabilities = np.append(final_probabilities, 1 - final_probabilities, axis=2)\n",
     "final_probabilities = -np.log(final_probabilities)\n",
-    "print(final_probabilities.shape)\n",
+    "#print(final_probabilities.shape)\n",
     "\n",
-    "softmax = final_probabilities#.squeeze()\n",
-    "print(softmax.shape)\n",
+    "softmax = final_probabilities# 256, 256, 2\n",
     "\n",
     "softmax = np.transpose(softmax, (2, 0, 1))\n",
     "\n",
-    "# The input should be the negative of the logarithm of probability values\n",
-    "# Look up the definition of the softmax_to_unary for more information\n",
-    "unary = unary_from_softmax(softmax)\n",
-    "print('u: ',softmax.shape)\n",
+    "unary = unary_from_softmax(softmax)# 2, 256, 256\n",
     "\n",
-    "# The inputs should be C-continious -- we are using Cython wrapper\n",
     "unary = np.ascontiguousarray(unary)\n",
     "unary = unary.reshape((2,-1))\n",
     "\n",
@@ -618,38 +613,19 @@
     "\n",
     "d.setUnaryEnergy(unary)\n",
     "\n",
-    "# This potential penalizes small pieces of segmentation that are\n",
-    "# spatially isolated -- enforces more spatially consistent segmentations\n",
-    "feats = create_pairwise_gaussian(sdims=(3, 3), shape=image.shape[:2])\n",
+    "feats_g = create_pairwise_gaussian(sdims=(3, 3), shape=image.shape[:2])\n",
     "\n",
-    "d.addPairwiseEnergy(feats, compat=5,\n",
-    "                    kernel=dcrf.DIAG_KERNEL,\n",
-    "                    normalization=dcrf.NORMALIZE_SYMMETRIC)\n",
+    "d.addPairwiseEnergy(feats_g, compat=5)\n",
     "\n",
-    "# This creates the color-dependent features --\n",
-    "# because the segmentation that we get from CNN are too coarse\n",
-    "# and we can use local color features to refine them\n",
-    "\n",
-    "feats = create_pairwise_bilateral(sdims=(10,10), schan=(0.01,),\n",
+    "feats_b = create_pairwise_bilateral(sdims=(10,10), schan=(0.01,),\n",
     "                                   img=image, chdim=2)\n",
     "\n",
-    "d.addPairwiseEnergy(feats, compat=10)\n",
+    "d.addPairwiseEnergy(feats_b, compat=10)\n",
     "\n",
     "Q = d.inference(5)\n",
     "\n",
     "res = np.argmax(Q, axis=0).reshape((image.shape[0], image.shape[1]))\n",
     "\n",
-    "'''\n",
-    "cmap = plt.get_cmap('bwr')\n",
-    "\n",
-    "\n",
-    "f, (ax1, ax2) = plt.subplots(1, 2, sharey=True)\n",
-    "ax1.imshow(res, vmax=1.5, vmin=-0.4, cmap=cmap)\n",
-    "ax1.set_title('Segmentation with CRF post-processing')\n",
-    "probability_graph = ax2.imshow(np.dstack((train_annotation,)*3)*100)\n",
-    "ax2.set_title('Ground-Truth Annotation')\n",
-    "plt.show()\n",
-    "'''\n",
     "print(res.shape)\n",
     "plt.figure(num=None, figsize=(12, 15), dpi=100, facecolor='w', edgecolor='k')\n",
     "plt.subplot(141), plt.title('Image '+str(num)), plt.imshow(X.reshape(size,size), cmap='gray')\n",
