--- a/k/model.ipynb
+++ b/k/model.ipynb
@@ -77,7 +77,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x7f36e17f4160>"
+       "<matplotlib.image.AxesImage at 0x7f1340341048>"
       ]
      },
      "execution_count": 3,
@@ -135,7 +135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -222,7 +222,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -230,64 +230,100 @@
      "output_type": "stream",
      "text": [
       "Train on 238 samples, validate on 103 samples\n",
-      "Epoch 1/20\n",
-      "238/238 [==============================] - 5s 20ms/step - loss: 0.1910 - acc: 0.8823 - val_loss: 0.1953 - val_acc: 0.8748\n",
-      "Epoch 2/20\n",
-      "238/238 [==============================] - 4s 18ms/step - loss: 0.1752 - acc: 0.9417 - val_loss: 0.1611 - val_acc: 0.9556\n",
-      "Epoch 3/20\n",
-      "238/238 [==============================] - 4s 18ms/step - loss: 0.1710 - acc: 0.9464 - val_loss: 0.1648 - val_acc: 0.9561\n",
-      "Epoch 4/20\n",
-      "238/238 [==============================] - 4s 18ms/step - loss: 0.1678 - acc: 0.9483 - val_loss: 0.1615 - val_acc: 0.9573\n",
-      "Epoch 5/20\n",
-      "238/238 [==============================] - 4s 18ms/step - loss: 0.1646 - acc: 0.9494 - val_loss: 0.1605 - val_acc: 0.9556\n",
-      "Epoch 6/20\n",
-      "238/238 [==============================] - 4s 18ms/step - loss: 0.1614 - acc: 0.9501 - val_loss: 0.1575 - val_acc: 0.9574\n",
-      "Epoch 7/20\n",
-      "238/238 [==============================] - 4s 18ms/step - loss: 0.1585 - acc: 0.9508 - val_loss: 0.1549 - val_acc: 0.9580\n",
-      "Epoch 8/20\n",
-      "238/238 [==============================] - 4s 18ms/step - loss: 0.1556 - acc: 0.9513 - val_loss: 0.1509 - val_acc: 0.9580\n",
-      "Epoch 9/20\n",
-      "238/238 [==============================] - 4s 18ms/step - loss: 0.1529 - acc: 0.9517 - val_loss: 0.1500 - val_acc: 0.9573\n",
-      "Epoch 10/20\n",
-      "238/238 [==============================] - 4s 18ms/step - loss: 0.1502 - acc: 0.9522 - val_loss: 0.1505 - val_acc: 0.9520\n",
-      "Epoch 11/20\n",
-      "238/238 [==============================] - 4s 18ms/step - loss: 0.1475 - acc: 0.9522 - val_loss: 0.1444 - val_acc: 0.9547\n",
-      "Epoch 12/20\n",
-      "238/238 [==============================] - 4s 18ms/step - loss: 0.1449 - acc: 0.9527 - val_loss: 0.1427 - val_acc: 0.9548\n",
-      "Epoch 13/20\n",
-      "238/238 [==============================] - 4s 18ms/step - loss: 0.1423 - acc: 0.9530 - val_loss: 0.1408 - val_acc: 0.9541\n",
-      "Epoch 14/20\n",
-      "238/238 [==============================] - 4s 18ms/step - loss: 0.1398 - acc: 0.9531 - val_loss: 0.1349 - val_acc: 0.9573\n",
-      "Epoch 15/20\n",
-      "238/238 [==============================] - 4s 18ms/step - loss: 0.1373 - acc: 0.9535 - val_loss: 0.1334 - val_acc: 0.9565\n",
-      "Epoch 16/20\n",
-      "238/238 [==============================] - 4s 18ms/step - loss: 0.1349 - acc: 0.9538 - val_loss: 0.1323 - val_acc: 0.9550\n",
-      "Epoch 17/20\n",
-      "238/238 [==============================] - 4s 18ms/step - loss: 0.1327 - acc: 0.9538 - val_loss: 0.1320 - val_acc: 0.9537\n",
-      "Epoch 18/20\n",
-      "238/238 [==============================] - 4s 18ms/step - loss: 0.1303 - acc: 0.9539 - val_loss: 0.1259 - val_acc: 0.9577\n",
-      "Epoch 19/20\n",
-      "238/238 [==============================] - 4s 18ms/step - loss: 0.1280 - acc: 0.9542 - val_loss: 0.1307 - val_acc: 0.9514\n",
-      "Epoch 20/20\n",
-      "238/238 [==============================] - 4s 18ms/step - loss: 0.1261 - acc: 0.9541 - val_loss: 0.1305 - val_acc: 0.9498\n"
+      "Epoch 1/50\n",
+      "238/238 [==============================] - 6s 27ms/step - loss: 0.1998 - acc: 0.8619 - val_loss: 0.2967 - val_acc: 0.7076\n",
+      "Epoch 2/50\n",
+      "238/238 [==============================] - 4s 18ms/step - loss: 0.1786 - acc: 0.9305 - val_loss: 0.1621 - val_acc: 0.9231\n",
+      "Epoch 3/50\n",
+      "238/238 [==============================] - 4s 18ms/step - loss: 0.1719 - acc: 0.9437 - val_loss: 0.1657 - val_acc: 0.9547\n",
+      "Epoch 4/50\n",
+      "238/238 [==============================] - 4s 18ms/step - loss: 0.1678 - acc: 0.9475 - val_loss: 0.1728 - val_acc: 0.9556\n",
+      "Epoch 5/50\n",
+      "238/238 [==============================] - 4s 18ms/step - loss: 0.1646 - acc: 0.9488 - val_loss: 0.1646 - val_acc: 0.9563\n",
+      "Epoch 6/50\n",
+      "238/238 [==============================] - 4s 18ms/step - loss: 0.1614 - acc: 0.9498 - val_loss: 0.1606 - val_acc: 0.9537\n",
+      "Epoch 7/50\n",
+      "238/238 [==============================] - 4s 18ms/step - loss: 0.1583 - acc: 0.9509 - val_loss: 0.1574 - val_acc: 0.9543\n",
+      "Epoch 8/50\n",
+      "238/238 [==============================] - 4s 18ms/step - loss: 0.1555 - acc: 0.9511 - val_loss: 0.1538 - val_acc: 0.9555\n",
+      "Epoch 9/50\n",
+      "238/238 [==============================] - 4s 18ms/step - loss: 0.1527 - acc: 0.9517 - val_loss: 0.1527 - val_acc: 0.9519\n",
+      "Epoch 10/50\n",
+      "238/238 [==============================] - 4s 18ms/step - loss: 0.1502 - acc: 0.9517 - val_loss: 0.1486 - val_acc: 0.9536\n",
+      "Epoch 11/50\n",
+      "238/238 [==============================] - 4s 18ms/step - loss: 0.1475 - acc: 0.9522 - val_loss: 0.1471 - val_acc: 0.9563\n",
+      "Epoch 12/50\n",
+      "238/238 [==============================] - 4s 18ms/step - loss: 0.1448 - acc: 0.9525 - val_loss: 0.1424 - val_acc: 0.9525\n",
+      "Epoch 13/50\n",
+      "238/238 [==============================] - 4s 18ms/step - loss: 0.1423 - acc: 0.9523 - val_loss: 0.1381 - val_acc: 0.9573\n",
+      "Epoch 14/50\n",
+      "238/238 [==============================] - 4s 18ms/step - loss: 0.1399 - acc: 0.9526 - val_loss: 0.1363 - val_acc: 0.9558\n",
+      "Epoch 15/50\n",
+      "238/238 [==============================] - 4s 18ms/step - loss: 0.1373 - acc: 0.9530 - val_loss: 0.1346 - val_acc: 0.9577\n",
+      "Epoch 16/50\n",
+      "238/238 [==============================] - 4s 18ms/step - loss: 0.1348 - acc: 0.9534 - val_loss: 0.1330 - val_acc: 0.9563\n",
+      "Epoch 17/50\n",
+      "238/238 [==============================] - 4s 18ms/step - loss: 0.1324 - acc: 0.9537 - val_loss: 0.1300 - val_acc: 0.9568\n",
+      "Epoch 18/50\n",
+      "238/238 [==============================] - 4s 18ms/step - loss: 0.1302 - acc: 0.9537 - val_loss: 0.1276 - val_acc: 0.9580\n",
+      "Epoch 19/50\n",
+      "238/238 [==============================] - 4s 18ms/step - loss: 0.1281 - acc: 0.9536 - val_loss: 0.1273 - val_acc: 0.9564\n",
+      "Epoch 20/50\n",
+      "238/238 [==============================] - 4s 18ms/step - loss: 0.1258 - acc: 0.9539 - val_loss: 0.1248 - val_acc: 0.9575\n",
+      "Epoch 21/50\n",
+      "238/238 [==============================] - 4s 18ms/step - loss: 0.1235 - acc: 0.9543 - val_loss: 0.1243 - val_acc: 0.9548\n",
+      "Epoch 22/50\n",
+      "238/238 [==============================] - 4s 18ms/step - loss: 0.1215 - acc: 0.9542 - val_loss: 0.1209 - val_acc: 0.9559\n",
+      "Epoch 23/50\n",
+      "238/238 [==============================] - 4s 18ms/step - loss: 0.1194 - acc: 0.9542 - val_loss: 0.1167 - val_acc: 0.9577\n",
+      "Epoch 24/50\n",
+      "238/238 [==============================] - 4s 18ms/step - loss: 0.1174 - acc: 0.9543 - val_loss: 0.1181 - val_acc: 0.9556\n",
+      "Epoch 25/50\n",
+      "238/238 [==============================] - 4s 18ms/step - loss: 0.1152 - acc: 0.9548 - val_loss: 0.1162 - val_acc: 0.9558\n",
+      "Epoch 26/50\n",
+      "238/238 [==============================] - 4s 18ms/step - loss: 0.1136 - acc: 0.9542 - val_loss: 0.1120 - val_acc: 0.9586\n",
+      "Epoch 27/50\n",
+      "238/238 [==============================] - 4s 18ms/step - loss: 0.1115 - acc: 0.9546 - val_loss: 0.1111 - val_acc: 0.9559\n",
+      "Epoch 28/50\n",
+      "238/238 [==============================] - 4s 18ms/step - loss: 0.1095 - acc: 0.9548 - val_loss: 0.1066 - val_acc: 0.9584\n",
+      "Epoch 29/50\n",
+      "238/238 [==============================] - 4s 18ms/step - loss: 0.1075 - acc: 0.9551 - val_loss: 0.1063 - val_acc: 0.9570\n",
+      "Epoch 30/50\n",
+      "238/238 [==============================] - 4s 18ms/step - loss: 0.1060 - acc: 0.9548 - val_loss: 0.1046 - val_acc: 0.9575\n",
+      "Epoch 31/50\n",
+      "238/238 [==============================] - 4s 18ms/step - loss: 0.1040 - acc: 0.9550 - val_loss: 0.1035 - val_acc: 0.9570\n",
+      "Epoch 32/50\n",
+      "238/238 [==============================] - 4s 18ms/step - loss: 0.1023 - acc: 0.9553 - val_loss: 0.1019 - val_acc: 0.9571\n",
+      "Epoch 33/50\n",
+      "238/238 [==============================] - 4s 18ms/step - loss: 0.1005 - acc: 0.9553 - val_loss: 0.0974 - val_acc: 0.9588\n",
+      "Epoch 34/50\n",
+      "238/238 [==============================] - 4s 18ms/step - loss: 0.0989 - acc: 0.9553 - val_loss: 0.0988 - val_acc: 0.9569\n",
+      "Epoch 35/50\n",
+      "238/238 [==============================] - 4s 18ms/step - loss: 0.0972 - acc: 0.9555 - val_loss: 0.0963 - val_acc: 0.9573\n",
+      "Epoch 36/50\n",
+      "238/238 [==============================] - 4s 18ms/step - loss: 0.0956 - acc: 0.9554 - val_loss: 0.0937 - val_acc: 0.9591\n",
+      "Epoch 37/50\n",
+      "238/238 [==============================] - 4s 18ms/step - loss: 0.0945 - acc: 0.9553 - val_loss: 0.1010 - val_acc: 0.9538\n",
+      "Epoch 38/50\n",
+      "238/238 [==============================] - 4s 18ms/step - loss: 0.0927 - acc: 0.9554 - val_loss: 0.0934 - val_acc: 0.9585\n",
+      "Epoch 39/50\n",
+      "238/238 [==============================] - 4s 18ms/step - loss: 0.0909 - acc: 0.9557 - val_loss: 0.0934 - val_acc: 0.9575\n",
+      "Epoch 40/50\n",
+      "238/238 [==============================] - 4s 18ms/step - loss: 0.0895 - acc: 0.9558 - val_loss: 0.0933 - val_acc: 0.9576\n",
+      "Epoch 41/50\n",
+      "238/238 [==============================] - 4s 18ms/step - loss: 0.0882 - acc: 0.9554 - val_loss: 0.0907 - val_acc: 0.9590\n",
+      "Epoch 42/50\n",
+      "238/238 [==============================] - 4s 18ms/step - loss: 0.0865 - acc: 0.9559 - val_loss: 0.0933 - val_acc: 0.9555\n",
+      "Epoch 43/50\n",
+      "220/238 [==========================>...] - ETA: 0s - loss: 0.0850 - acc: 0.9553"
      ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "<keras.callbacks.History at 0x7f33a726b400>"
-      ]
-     },
-     "execution_count": 9,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
     "# training\n",
     "model.fit(X_train, Y_train,\n",
     "                validation_split=0.3,\n",
-    "                epochs=20,\n",
+    "                epochs=50,\n",
     "                batch_size=20,\n",
     "                shuffle=True,\n",
     "                callbacks=[tensorboard])"
